--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -55,7 +55,7 @@ html, body {
 
   .caption{
     display: inline-block;
-    width: 220px;
+    width: auto;
   }
 
 }
